NHPCD - Network Hardware Point Cloud Decoder (proof-of-concept)
- working proof of concept for NHPCD
- some hardcoded data for Realsense D435

Proof of concept:
- to be turned into final clean code

Related to:
https://github.com/bmegli/unity-network-hardware-video-decoder/issues/5

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,16 +10,18 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 # compile dependencies as static libraries
 add_library(hvd hardware-video-decoder/hvd.c)
 add_library(mlsp minimal-latency-streaming-protocol/mlsp.c)
+add_library(hdu hardware-depth-unprojector/hdu.c)
 
 # this is our main target
 add_library(nhvd SHARED nhvd.cpp)
 target_include_directories(nhvd PRIVATE hardware-video-decoder)
 target_include_directories(nhvd PRIVATE minimal-latency-streaming-protocol)
+target_include_directories(nhvd PRIVATE hardware-depth-unprojector)
 
 # note that nhvd depends through hvd on FFMpeg avcodec and avutil, at least 3.4 version
-target_link_libraries(nhvd hvd mlsp avcodec avutil)
+target_link_libraries(nhvd hvd mlsp hdu avcodec avutil)
 
 add_executable(nhvd-receive-example examples/nhvd_receive_example.cpp)
-target_link_libraries(nhvd-receive-example nhvd)
+target_link_libraries(nhvd-receive-example nhvd hdu)
 
 
