multi-frame streaming (#12)
- single library interface for
   - initializing single/multiple hardware decoders
   - getting single/multiple frames
- example of multi frame receiving and decoding
- multi-frame example
- cloud example for multi-frame approach
- merge common code paths (error handling)
- improve sanity checks for depth decoding & unprojection
- note about multi-frame streaming in readme

Closes #9, #11 
Related to https://github.com/bmegli/hardware-video-streaming/issues/5

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,9 @@ target_link_libraries(nhvd hvd mlsp hdu avcodec avutil)
 add_executable(nhvd-frame-example examples/nhvd_frame_example.cpp)
 target_link_libraries(nhvd-frame-example nhvd hdu)
 
+add_executable(nhvd-frame-multi-example examples/nhvd_frame_multi_example.cpp)
+target_link_libraries(nhvd-frame-multi-example nhvd hdu)
+
 add_executable(nhvd-cloud-example examples/nhvd_cloud_example.cpp)
 target_link_libraries(nhvd-cloud-example nhvd hdu)
 
