NHVD-UNHVD split (#13)
make library conceptually simple

- leave only network decoding in NHVD
  - receive data on network
  - hardware decode
  - simple synchronous interface
- update docs for new interface
- hierarchical CMake build

Remove application specific code:
- Unity integration
- threading and synchronization
- depth unprojection

Closes #10

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,26 +8,21 @@ project(
 # use fPIC for all libraries
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-# compile dependencies as static libraries
-add_library(hvd hardware-video-decoder/hvd.c)
-add_library(mlsp minimal-latency-streaming-protocol/mlsp.c)
-add_library(hdu hardware-depth-unprojector/hdu.c)
+add_subdirectory(hardware-video-decoder)
+add_subdirectory(minimal-latency-streaming-protocol)
 
 # this is our main target
-add_library(nhvd SHARED nhvd.cpp)
+add_library(nhvd nhvd.c)
 target_include_directories(nhvd PRIVATE hardware-video-decoder)
 target_include_directories(nhvd PRIVATE minimal-latency-streaming-protocol)
-target_include_directories(nhvd PRIVATE hardware-depth-unprojector)
 
 # note that nhvd depends through hvd on FFMpeg avcodec and avutil, at least 3.4 version
-target_link_libraries(nhvd hvd mlsp hdu avcodec avutil)
+target_link_libraries(nhvd hvd mlsp)
 
-add_executable(nhvd-frame-example examples/nhvd_frame_example.cpp)
-target_link_libraries(nhvd-frame-example nhvd hdu)
+add_executable(nhvd-frame-example examples/nhvd_frame_example.c)
+target_link_libraries(nhvd-frame-example nhvd)
 
-add_executable(nhvd-frame-multi-example examples/nhvd_frame_multi_example.cpp)
-target_link_libraries(nhvd-frame-multi-example nhvd hdu)
+add_executable(nhvd-frame-multi-example examples/nhvd_frame_multi_example.c)
+target_link_libraries(nhvd-frame-multi-example nhvd)
 
-add_executable(nhvd-cloud-example examples/nhvd_cloud_example.cpp)
-target_link_libraries(nhvd-cloud-example nhvd hdu)
 
