[breaking interface change] auxiliary data channels
Implements #17

Breaking interface change:
- added aux_size argument to nhvd_init

Other changes:
- expose auxiliary data channels through `nhvd_receive_all`
- documentation
- updated readme
- example with video channel + auxiliary channel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,8 @@ target_link_libraries(nhvd-frame-example nhvd)
 add_executable(nhvd-frame-raw-example examples/nhvd_frame_raw_example.c)
 target_link_libraries(nhvd-frame-raw-example nhvd)
 
+add_executable(nhvd-frame-aux-example examples/nhvd_frame_aux_example.c)
+target_link_libraries(nhvd-frame-aux-example nhvd)
+
 add_executable(nhvd-frame-multi-example examples/nhvd_frame_multi_example.c)
 target_link_libraries(nhvd-frame-multi-example nhvd)
-
-
